Fix overflow in dat-network-activity time column

--- a/app/stylesheets/builtin-pages/components/dat-network-activity.less
+++ b/app/stylesheets/builtin-pages/components/dat-network-activity.less
@@ -72,7 +72,8 @@
     .mtime {
       color: rgba(0,0,0,0.5);
       flex: 100px;
-      width: 100px;
+      white-space: nowrap;
+      overflow: hidden;
     }
 
     .buttons {
